refactor: Timeline component & add: ClicknDetect hooks

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   .translate-center {
     @apply left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2;
   }
+  .marker-timeline {
+    @apply absolute h-full w-[0.5px] bg-red-500 -translate-x-1/2 before:content-[''] before:size-2 before:rounded-lg before:absolute before:bg-red-500 before:-translate-x-1/2 before:-translate-y-full;
+  }
 }
 
 body {
