--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,13 @@
   .marker-timeline {
     @apply absolute h-full w-[0.5px] bg-red-500 -translate-x-1/2 before:content-[''] before:size-2 before:rounded-lg before:absolute before:bg-red-500 before:-translate-x-1/2 before:-translate-y-full;
   }
+
+  /* .thumb-button-root { */
+  /*   @apply absolute left-0 top-1/2 -translate-x-1/2 -translate-y-1/2 w-5 h-5 rounded-lg transition-colors z-20; */
+  /* } */
+  /* .thumb-button { */
+  /*   @apply absolute size-3 rounded-lg translate-center pointer-events-none; */
+  /* } */
 }
 
 body {
